bugfix- table responsiveness, allowing horizontal scrolling on mobile

--- a/web/themes/custom/pineapple/sass/base/_tables.scss
+++ b/web/themes/custom/pineapple/sass/base/_tables.scss
@@ -42,3 +42,7 @@ table {
     }
   }
 }
+
+.table-responsive {
+  overflow-y: hidden;
+}
